AgentforceHackathon/force-app/main/default/objects/Warranty_Insurance__c/Warranty_Insurance__c.object-meta.xml
<CustomObject>
    <label>Warranty Insurance</label>
    <nameField>
        <label>Warranty Insurance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warranty Insurances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>