AgentforceHackathon/force-app/main/default/objects/Warranty_Insurance__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>