AgentforceHackathon/force-app/main/default/objects/Warranty_Insurance__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle2__c</referenceTo>
    <relationshipLabel>Warranty Insurances</relationshipLabel>
    <relationshipName>Warranty_Insurances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>